# fieldtheory

./: .gitignore  App.tsx  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE.md  PRODUCT_OVERVIEW.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  TRADEMARKS.md  app.json  arch.md  babel.config.js  dynamic-island-demo.html  eas.json  field-theory.onboard  index.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
.flow/: bitnet-20260115.md  null-keyboard-20260115.md
.github/: PULL_REQUEST_TEMPLATE.md
android/: settings.gradle
commands/: visual.md
components/: CommandsList.tsx  CursorBrowser.tsx  LibraryView.tsx  ObservationList.tsx  PullToCreate.tsx  SketchCanvas.tsx  SketchList.tsx  TodoList.tsx  TranscriptItem.tsx  VoiceTester.tsx
docs/: BACKGROUND_RECORDING_USAGE.md  CURSOR_BROWSER_FEATURE.md  DATA_FLOW_DIAGRAM.md  HOT_MIC_VOICE_COMMANDS_GUIDE.md  INTERNAL_BUILD_GUIDE.md  IOS_PUBLIC_READINESS_REVIEW.md  IOS_PUBLIC_RELEASE_RUNBOOK.md  IOS_RELEASE_SOURCE_OF_TRUTH.md  LIBRARY_MOBILE_PARITY.md  LIVE_ACTIVITY_IMPLEMENTATION.md  MARKETING_PLAN.md  TESTFLIGHT_BUILD_GUIDE.md  outreach-playbook-expanded.md
ggml/: field-theory-engagement-threads.md  field-theory-marketing-plan.md  find-engagement-threads.md  vibe-coding-influencers-list.md
hooks/: useHeadsetControls.ts  useScopedAppData.ts  useSyncCoordinator.ts  useWhisperRecording.ts
ios/: Podfile
learnings/: (apr)-auth-is-identity-licenses-are-entitlements.md  (dec)-css-visibility-over-conditional-rendering-for-stateful-views.md  (jan)-when-pragmatism-becomes-a-cop-out.md  README.md  (+1 more)
www/: faq.html  (+13 more)
(+771 files in other folders)
