[project]
name = "oscar"
version = "0.0.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
coreml = [
    "torch",
    "coremltools",
    "openai-whisper",
    "ane_transformers",
]
openvino = [
    "openvino-dev[pytorch,onnx]",
    "openai-whisper",
]
test = [
    "jiwer",
    "regex",
    "more-itertools",
]

[tool.uv]
exclude-newer = "1 week"
